# aoc-rust-2022

./: Cargo.toml  README.md
src/puzzles/: 02.md  05.md  06.md  07.md
